--- a/website/static/a.css
+++ b/website/static/a.css
@@ -4,15 +4,37 @@
     padding:0;
     font-family:Tahoma,'simsun';
     text-decoration:none;
+    font-size:17px;
 }
 #top{
     height:30px;
 }
 #main{
-    width:600px;
-    margin-top:100px;
+    width:320px;
+    margin-top:60px;
     margin-left:auto;
     margin-right:auto;
+}
+#logo{
+    width:320px;
+    height:160px;
+    margin-left:auto;
+    margin-right:auto;
+}
+#query{
+    width:100%;
+    padding-left:5px;
+    height:30px;
+}
+#ok{
+    width:120px;
+    height:30px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:10px;
+    /*padding-left:20px;
+    padding-right:20px;
+    */
 }
 #bottom{
     height:100px;
