--- a/web/static/a.css
+++ b/web/static/a.css
@@ -2,7 +2,7 @@
 *{
     margin:0;
     padding:0;
-    font-family:Tahoma,'simsun';
+    font-family:arial, sans-serif;
     text-decoration:none;
     font-size:17px;
 }
