--- a/web/static/b.css
+++ b/web/static/b.css
@@ -42,7 +42,9 @@
     float:left;
 }
 #result{
-    padding-top:30px;
+    border-top:1px solid #dedede;
+    margin-top:20px;
+    padding-top:10px;
     width:800px;
     height:970px;
 }
