--- a/web/static/a.css
+++ b/web/static/a.css
@@ -10,7 +10,7 @@
     height:30px;
 }
 #main{
-    width:320px;
+    width:500px;
     margin-top:60px;
     margin-left:auto;
     margin-right:auto;
@@ -21,8 +21,19 @@
     margin-left:auto;
     margin-right:auto;
 }
+.row{
+    height:60px;
+}
+.label{
+    width:100px;
+}
 #query{
-    width:100%;
+    width:400px;
+    padding-left:5px;
+    height:30px;
+}
+#price{
+    width:240px;
     padding-left:5px;
     height:30px;
 }
