--- a/web/static/a.css
+++ b/web/static/a.css
@@ -5,6 +5,7 @@
     font-family:arial, sans-serif;
     text-decoration:none;
     font-size:17px;
+    list-style-type:none;
 }
 #top{
     height:30px;
