Modified the logo.

--- a/web/static/a.css
+++ b/web/static/a.css
@@ -11,7 +11,7 @@
     height:30px;
 }
 #main{
-    width:500px;
+    width:800px;
     margin-top:60px;
     margin-left:auto;
     margin-right:auto;
@@ -22,6 +22,11 @@
     margin-left:auto;
     margin-right:auto;
 }
+#form{
+    width:520px;
+    margin-left:auto;
+    margin-right:auto;
+}
 .row{
     height:60px;
 }
@@ -29,9 +34,12 @@
     width:100px;
 }
 #query{
-    width:400px;
+    width:320px;
     padding-left:5px;
     height:30px;
+}
+#adv{
+    display:none;
 }
 #price{
     width:240px;
